Fix(Desktop): disable video player for Desktop